// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`loading templates > addTemplates does not modify its xml document in place 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['value']);
    return block1([], [b2]);
  }
}"
`;

exports[`loading templates > can initialize qweb with a string 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<div>jupiler</div>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`loading templates > can initialize qweb with an XMLDocument 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<div>jupiler</div>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`loading templates > can load a few templates from a xml string 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { callTemplate } = helpers;
  
  let block1 = createBlock(\`<ul><block-child-0/></ul>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = callTemplate(\`items\`, this, app, ctx, node, key + \`__1\`);
    return block1([], [b2]);
  }
}"
`;

exports[`loading templates > can load a few templates from a xml string 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block2 = createBlock(\`<li>ok</li>\`);
  let block3 = createBlock(\`<li>foo</li>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = block2();
    const b3 = block3();
    return multi([b2, b3]);
  }
}"
`;

exports[`loading templates > can load a few templates from an XMLDocument 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { callTemplate } = helpers;
  
  let block1 = createBlock(\`<ul><block-child-0/></ul>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = callTemplate(\`items\`, this, app, ctx, node, key + \`__1\`);
    return block1([], [b2]);
  }
}"
`;

exports[`loading templates > can load a few templates from an XMLDocument 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block2 = createBlock(\`<li>ok</li>\`);
  let block3 = createBlock(\`<li>foo</li>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = block2();
    const b3 = block3();
    return multi([b2, b3]);
  }
}"
`;

exports[`loading templates > getTemplate: element returned (2) 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<div>Hello World!</div>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`loading templates > getTemplate: element returned 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<div>Hello World!</div>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`loading templates > getTemplate: template string returned 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<div>Hello World!</div>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`loading templates > getTemplate: undefined returned 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<div>Hello World!</div>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;
